# aws-event-driven-pipeline

./: .gitignore  CLAUDE.md  README.md  app.py  cdk.json  pyproject.toml
docs/cli-playbooks/: 01-ingest.md  02-processing.md  03-analytics.md  04-dlq-operations.md
lambda/processor/: handler.py
pipeline_lab/: analytics_stack.py  ingest_stack.py  process_stack.py
scripts/: pipeline_health.py  query_athena.py  redrive_dlq.py  send_test_event.py
